# RegulensAI

./: .env.backup.1753701994  .env.example  .gitignore  COMPLIANCE_VERIFICATION.md  CONSOLIDATION_SUMMARY.md  Cargo.toml  Dockerfile  FINAL_COMPLIANCE_VERIFICATION.md  PRODUCTION_READINESS_ACTION_ITEMS.md  PROJECT_PHASES.md  README.md  clean_deployment_check.py  critical_schema_audit.py  deploy_schema_to_supabase.py  docker-compose.yml  emergency_schema_fix.py  final_comprehensive_validation.py  final_fix_and_validate.py  final_validation.py  fix_schema_issues.py  fix_users_table.py  oneclickinstall.sh  openapi_spec.json  pytest.ini  real_openapi_spec.json  regulens-logrotate  regulens_demo.html  requirements-minimal.txt  requirements.txt  schema_deployment_report.txt  security_audit_report.json  test_api_docs.py  ultimate_final_validation.py
services/ai-orchestration-service/: Cargo.toml  Dockerfile
services/ai-orchestration-service/src/: agents.rs  main.rs
services/ai-orchestration-service/src/agents/: mod.rs
services/ai-orchestration-service/src/handlers/: mod.rs
services/ai-orchestration-service/src/models/: mod.rs
services/ai-orchestration-service/src/nlp/: mod.rs
services/ai-orchestration-service/src/orchestration/: mod.rs
services/ai-orchestration-service/src/repositories/: mod.rs
services/ai-orchestration-service/src/services/: mod.rs
services/aml/: Cargo.toml  Dockerfile
services/aml/src/: main.rs  reporting.rs  risk_scoring.rs
services/aml/src/handlers/: mod.rs
services/aml/src/models/: mod.rs
services/aml/src/monitoring/: mod.rs
services/aml/src/repositories/: mod.rs
services/aml/src/screening/: mod.rs
services/aml/src/services/: aml_service.rs  mod.rs
services/aml/tests/: integration_tests.rs  risk_scoring_tests.rs
services/api-gateway/: Cargo.toml  Dockerfile
services/api-gateway/src/: balancing.rs  discovery.rs  main.rs  middleware.rs  routing.rs
services/api-gateway/tests/: integration_tests.rs
services/compliance-service/: Cargo.toml  Dockerfile
services/compliance-service/src/: main.rs
services/compliance-service/src/handlers/: mod.rs
services/compliance-service/src/models/: mod.rs
services/compliance-service/src/repositories/: mod.rs
services/compliance-service/src/services/: mod.rs
services/compliance-service/src/workflows/: mod.rs
services/compliance-service/tests/: integration_tests.rs
services/cybersecurity-service/: Cargo.toml  Dockerfile
services/cybersecurity-service/src/: main.rs
services/cybersecurity-service/src/handlers/: mod.rs
services/cybersecurity-service/src/repositories/: mod.rs
services/cybersecurity-service/src/services/: mod.rs
services/cybersecurity-service/tests/: integration_tests.rs
services/documentation-service/: Cargo.toml  Dockerfile
services/documentation-service/config/: default.yaml
services/documentation-service/src/: indexing.rs  main.rs  models.rs  templates.rs  testing.rs  versioning.rs
services/documentation-service/src/handlers/: mod.rs
services/documentation-service/src/search/: mod.rs
services/documentation-service/static/css/: documentation.css  testing.css
services/documentation-service/static/js/: advanced-analytics.js  documentation.js  testing.js
services/documentation-service/templates/: base.html  home.html  test_results.html  testing_dashboard.html  user_guide.html  user_guide_home.html  user_guide_module.html
services/documentation-service/tests/: integration_tests.rs  testing_integration_tests.rs
services/fraud-detection-service/: Cargo.toml  Dockerfile
services/fraud-detection-service/src/: main.rs
services/fraud-detection-service/src/analytics/: mod.rs
services/fraud-detection-service/src/graph/: mod.rs
services/fraud-detection-service/src/handlers/: mod.rs
services/fraud-detection-service/src/ml/: mod.rs
services/fraud-detection-service/src/models/: mod.rs
services/fraud-detection-service/src/repositories/: mod.rs
services/fraud-detection-service/src/services/: mod.rs
services/fraud-detection-service/tests/: integration_tests.rs
services/risk-management-service/: Cargo.toml  Dockerfile
services/risk-management-service/src/: main.rs
services/risk-management-service/src/analytics/: mod.rs
services/risk-management-service/tests/: integration_tests.rs
shared/auth/: Cargo.toml
shared/auth/src/: jwt.rs  lib.rs  middleware.rs  password.rs  rbac.rs  session.rs  types.rs
shared/cache/: Cargo.toml
shared/cache/src/: coherence.rs  compression.rs  config.rs  errors.rs  invalidation.rs  l1_memory.rs  l2_redis.rs  l3_database.rs  lib.rs  metrics.rs  multi_level.rs  serialization.rs  strategies.rs  warming.rs
shared/cache/tests/: integration_tests.rs
shared/common/: Cargo.toml
shared/common/src/: constants.rs  lib.rs  traits.rs  types.rs  utils.rs  validation.rs
shared/config/: Cargo.toml
shared/config/src/: database.rs  external.rs  lib.rs  monitoring.rs  redis.rs  security.rs  service.rs  settings.rs
shared/database/: Cargo.toml
shared/database/src/: connection.rs  lib.rs
shared/errors/: Cargo.toml
shared/errors/src/: database.rs  external.rs  http.rs  lib.rs  types.rs  validation.rs
shared/logging/: Cargo.toml
shared/logging/src/: lib.rs
shared/metrics/: Cargo.toml
shared/metrics/src/: alerts.rs  analytics.rs  business_metrics.rs  collectors.rs  compliance_metrics.rs  config.rs  custom_metrics.rs  customer_metrics.rs  dashboards.rs  database_schema.rs  errors.rs  exporters.rs  fraud_metrics.rs  lib.rs  operational_metrics.rs  risk_metrics.rs  sla_metrics.rs  transaction_metrics.rs
shared/security/: Cargo.toml
shared/security/src/: config.rs  errors.rs  ip_filtering.rs  lib.rs  metrics.rs  owasp.rs  rate_limiting.rs  security_headers.rs  threat_detection.rs  types.rs  vulnerability_scanner.rs  waf.rs
shared/security/tests/: integration_tests.rs
shared/testing/: Cargo.toml
shared/testing/src/: assertions.rs  contract_testing.rs  fixtures.rs  integration_testing.rs  lib.rs  mock_services.rs  performance_testing.rs  property_testing.rs  test_data.rs  test_factories.rs
(+363 files in other folders)
