[package]
name = "regulateai-documentation-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Web-based documentation service for RegulateAI"

[dependencies]
# Async runtime and web framework
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database and ORM
sqlx = { workspace = true }
sea-orm = { workspace = true }

# Date and time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Validation
validator = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
config = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Template engine for web pages
tera = "1.19"
askama = "0.12"

# Additional dependencies for web-based testing
axum-extra = { version = "0.9", features = ["ws"] }
tokio-stream = "0.1"
futures = "0.3"
regex = "1.0"



# Search functionality
tantivy = "0.21"

# Markdown processing (for content conversion)
pulldown-cmark = "0.9"

# Syntax highlighting
syntect = "5.1"

# RegulateAI shared libraries
regulateai-common = { path = "../../shared/common" }
regulateai-errors = { path = "../../shared/errors" }
regulateai-config = { path = "../../shared/config" }
regulateai-database = { path = "../../shared/database" }
regulateai-auth = { path = "../../shared/auth" }
regulateai-logging = { path = "../../shared/logging" }
