[package]
name = "regulateai-risk-management-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Enterprise Risk Management service for RegulateAI platform"

[dependencies]
# Async runtime and web framework
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database and ORM
sqlx = { workspace = true }
sea-orm = { workspace = true }

# Date and time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Validation
validator = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
config = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Metrics
prometheus = { workspace = true }

# Mathematical computations
nalgebra = "0.32"
statrs = "0.16"
rand = { workspace = true }
rand_distr = "0.4"

# Decimal handling for financial calculations
rust_decimal = { workspace = true }

# Async traits
async-trait = { workspace = true }

# CSV processing for data import/export
csv = "1.3"

# Excel file processing
calamine = "0.22"

# PDF generation for reports
printpdf = "0.6"

# Template engine for reports
tera = "1.19"

# RegulateAI shared libraries
regulateai-common = { path = "../../shared/common" }
regulateai-errors = { path = "../../shared/errors" }
regulateai-config = { path = "../../shared/config" }
regulateai-database = { path = "../../shared/database" }
regulateai-auth = { path = "../../shared/auth" }
regulateai-logging = { path = "../../shared/logging" }
