[package]
name = "regulateai-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

# Async and concurrency
futures = "0.3"
dashmap = "5.5"
arc-swap = "1.6"

# L1 Cache (In-Memory)
moka = { version = "0.12", features = ["future"] }
mini-moka = "0.10"

# L2 Cache (Redis)
redis = { version = "0.24", features = ["aio", "tokio-comp", "connection-manager", "cluster", "json"] }
deadpool-redis = "0.14"

# L3 Cache (Database)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }

# Compression
lz4_flex = "0.11"
zstd = "0.13"

# Serialization
bincode = "1.3"
rmp-serde = "1.1"

# Hashing
blake3 = "1.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Configuration
config = "0.14"

# Logging
tracing = "0.1"

# Time utilities
instant = "0.1"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[[bench]]
name = "cache_benchmarks"
harness = false
