[package]
name = "regulateai-errors"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Error handling and custom error types for RegulateAI services"

[dependencies]
# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP status codes
axum = { workspace = true }

# Logging
tracing = { workspace = true }

# UUID for correlation IDs
uuid = { workspace = true }

# Date and time
chrono = { workspace = true }

# Validation errors
validator = { workspace = true }
