[package]
name = "regulateai-logging"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Structured logging and observability for RegulateAI services"

[dependencies]
# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-jaeger = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# UUID for correlation IDs
uuid = { workspace = true }

# Date and time
chrono = { workspace = true }

# Async runtime
tokio = { workspace = true }

# RegulateAI shared libraries
regulateai-common = { path = "../common" }
regulateai-config = { path = "../config" }
