[package]
name = "regulateai-security"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

# Security dependencies
regex = "1.10"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.21"
argon2 = "0.5"

# HTTP and networking
axum = "0.7"
hyper = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async and concurrency
futures = "0.3"
dashmap = "5.5"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

# Configuration
config = "0.14"

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# IP address handling
ipnet = "2.9"
maxminddb = "0.24"

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

[dev-dependencies]
tokio-test = "0.4"
