[package]
name = "regulateai-testing"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

# Property-based testing
proptest = "1.4"
proptest-derive = "0.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"
arbitrary = { version = "1.3", features = ["derive"] }

# Contract testing
pact_consumer = { version = "1.0", features = ["datetime", "xml", "plugins"] }
pact_mock_server = "1.0"
pact_models = "1.0"

# HTTP client for contract testing
reqwest = { version = "0.11", features = ["json"] }
wiremock = "0.5"

# Testing utilities
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }
rstest = "0.18"
test-case = "3.3"

# Async testing
tokio-test = "0.4"
futures = "0.3"

# Logging for tests
tracing = "0.1"
tracing-test = "0.2"

# Database testing
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Metrics testing
prometheus = "0.13"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[[bench]]
name = "property_test_benchmarks"
harness = false
